syntax = "proto3";
package dataArray;

// A simple service for writing an int data array to a server,
// and returning pertinent data in a response int array. 
service DataWriter {
  rpc WriteIntDataArray(IntDataArray) returns (IntDataArray) {}
}

// A simple service for reading a stream of IntDataArrays.
service DataReader {
  rpc GetIntDataArrays() returns (stream IntDataArray) {}
}

message IntDataArray {
  repeated int32 data = 1;
}



